<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:background="@color/slate_grey"
    android:orientation="vertical"
    android:id="@+id/background">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/appBarLayout2">
        <android.support.v7.widget.Toolbar
            android:id="@+id/top_buddy_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_black_border_bottom">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/menu_bars"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/menu_icon" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_toEndOf="@+id/menu_bars"
                    android:paddingEnd="45dp"
                    android:src="@drawable/classbuddies" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">

        <TextView
            android:id="@+id/search_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="How would you like to filter your search?" />
        <!--Line-->
        <View
            android:layout_width="375dp"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@id/search_filter"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:id="@+id/view1" />

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/radio_buttons"
    android:layout_below="@+id/view1"
    android:orientation="horizontal">
        <RadioButton
            android:id="@+id/search_by_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:onClick="onRadioButtonClicked"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Users"
            android:layout_marginEnd="25dp"/>

        <RadioButton
            android:id="@+id/search_by_groups"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:onClick="onRadioButtonClicked"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="Groups" />
</RadioGroup>
        <TextView
            android:id="@+id/search_specific_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_buttons"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="Please enter a specific class name: " />
    </RelativeLayout>
    <SearchView
        android:id="@+id/search_view"
        android:layout_width="375dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:queryHint="Search Here">
    </SearchView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/resultsText"/>
    <!--Line-->
    <View
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey"
        android:id="@+id/view" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_result_title"
        android:textColor="@color/grey"/>


    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="7dp"
        android:scrollbars="vertical" />
</LinearLayout>